@startuml
interface Flyable {
+ void fly()
}

abstract class Animal {
+ {abstract}void makeSound()
+ {abstract}void eat()
}

interface Runnable {
+ void run()
}

class Cat {
+ void makeSound()
+ void eat()
+ void run()
}

class Bird {
+ void makeSound()
+ void eat()
+ void fly()
}

class Dog {
+ void makeSound()
+ void eat()
+ void run()
}



Runnable <|.. Cat
Animal <|-- Cat
Flyable <|.. Bird
Animal <|-- Bird
Runnable <|.. Dog
Animal <|-- Dog
@enduml